--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.3",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
+    "mapbox-gl": "^2.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.21",
