--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "mapbox-gl": "^2.12.1",
+    "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.21",
